<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/topSearchBtn"
        android:layout_width="114dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:background="#FFEB3B"
        android:onClick="topSearch_onClick"
        android:text="@string/search"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/topRegiBtn"
        app:layout_constraintEnd_toStartOf="@+id/topRegiBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/topRegiBtn"
        android:layout_width="124dp"
        android:layout_height="58dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="96dp"
        android:background="#03A9F4"
        android:onClick="topNewRegi_onClick"
        android:text="@string/new_regi"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/topSearchBtn" />

    <Button
        android:id="@+id/topModelBtn"
        android:layout_width="111dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#CDDC39"
        android:text="@string/model_set"
        android:textSize="24sp"
        android:onClick="topModelBtn_onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>